sentiment value tweets by user

--- a/Integrador_2.ipynb
+++ b/Integrador_2.ipynb
@@ -2280,9 +2280,10 @@
       "metadata": {
         "id": "D3jbMHM8rclc",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
         },
-        "outputId": "6d14d0da-4e86-4dad-b3e6-bd24364cc5fb"
+        "outputId": "c60f63ef-8681-4682-ba0f-ea30f259a25c"
       },
       "source": [
         "userID = \"elonmusk\"\n",
@@ -2291,117 +2292,166 @@
         "for info in tweets:\n",
         "     print(\"ID: {}\".format(info.id))\n",
         "     print(info.created_at)\n",
-        "     print(info.full_text)\n",
+        "     print(info.full_text, s.sentiment(info.full_text))\n",
         "     print(\"\\n\")"
       ],
-      "execution_count": 11,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "USER ID:  elonmusk\n",
+            "ID: 1417274819461095432\n",
+            "2021-07-20 00:07:03\n",
+            "Full test duration firing of 3 Raptors on Super Heavy Booster! ('neg', 0.8)\n",
+            "\n",
+            "\n",
             "ID: 1417207016519454724\n",
             "2021-07-19 19:37:37\n",
-            "@jack @BitcoinMagazine @CathieDWood Sure, I have a ton\n",
+            "@jack @BitcoinMagazine @CathieDWood Sure, I have a ton ('neg', 0.6)\n",
             "\n",
             "\n",
             "ID: 1417204066552205332\n",
             "2021-07-19 19:25:54\n",
-            "@BitcoinMagazine @jack @CathieDWood During this talk, we will sing a cover of The Final Countdown by Europe https://t.co/7YUXiW8dhd\n",
+            "@BitcoinMagazine @jack @CathieDWood During this talk, we will sing a cover of The Final Countdown by Europe https://t.co/7YUXiW8dhd ('neg', 0.6)\n",
             "\n",
             "\n",
             "ID: 1416970848104173574\n",
             "2021-07-19 03:59:10\n",
-            "@DragTimes @Tesla Nice\n",
+            "@DragTimes @Tesla Nice ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416961748138033152\n",
             "2021-07-19 03:23:01\n",
-            "@grimnut @Tesla @WholeMarsBlog @DirtyTesla Haha\n",
+            "@grimnut @Tesla @WholeMarsBlog @DirtyTesla Haha ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416951898049896450\n",
             "2021-07-19 02:43:52\n",
-            "@WholeMarsBlog You don’t even need to touch the shifter in new S. Auto detect direction will come as an optional setting to all cars with FSD.\n",
+            "@WholeMarsBlog You don’t even need to touch the shifter in new S. Auto detect direction will come as an optional setting to all cars with FSD. ('neg', 0.6)\n",
             "\n",
             "\n",
             "ID: 1416780739228602379\n",
             "2021-07-18 15:23:45\n",
-            "@thePiggsBoson Problem 1st, theory 2nd is for sure way to go, as it establishes relevance, thus improving memory retention\n",
+            "@thePiggsBoson Problem 1st, theory 2nd is for sure way to go, as it establishes relevance, thus improving memory retention ('neg', 0.6)\n",
             "\n",
             "\n",
             "ID: 1416663763151949824\n",
             "2021-07-18 07:38:56\n",
-            "Cybrrrtruck https://t.co/rdiMFdYOS6\n",
+            "Cybrrrtruck https://t.co/rdiMFdYOS6 ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416593609302945792\n",
             "2021-07-18 03:00:10\n",
-            "@ArtifactsHub And all-time hodl champion\n",
+            "@ArtifactsHub And all-time hodl champion ('neg', 1.0)\n",
             "\n",
             "\n",
             "ID: 1416591988695126016\n",
             "2021-07-18 02:53:43\n",
-            "@ArtifactsHub OG Hipster\n",
+            "@ArtifactsHub OG Hipster ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416519319564001286\n",
             "2021-07-17 22:04:58\n",
-            "@ValaAfshar Indeed\n",
+            "@ValaAfshar Indeed ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416518626274910212\n",
             "2021-07-17 22:02:12\n",
-            "@waitbutwhy Pohtaytohz\n",
+            "@waitbutwhy Pohtaytohz ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416511905515048966\n",
             "2021-07-17 21:35:30\n",
-            "@squawksquare Current Summon is sometimes useful, but mostly just a fun trick. Once we move summon (plus highway driving) to a single FSD stack, it will be sublime.\n",
+            "@squawksquare Current Summon is sometimes useful, but mostly just a fun trick. Once we move summon (plus highway driving) to a single FSD stack, it will be sublime. ('pos', 1.0)\n",
             "\n",
             "\n",
             "ID: 1416479939155697664\n",
             "2021-07-17 19:28:29\n",
-            "@billycrammer @Tesla Cool!\n",
+            "@billycrammer @Tesla Cool! ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416457822502543360\n",
             "2021-07-17 18:00:36\n",
-            "@engineers_feed There’s a corner case where brick density is same density as water, reaching bottom due to momentum\n",
+            "@engineers_feed There’s a corner case where brick density is same density as water, reaching bottom due to momentum ('neg', 1.0)\n",
             "\n",
             "\n",
             "ID: 1416453816069857283\n",
             "2021-07-17 17:44:40\n",
-            "Fred Astaire is incredible. Worth watching his movies. One of a kind.\n",
+            "Fred Astaire is incredible. Worth watching his movies. One of a kind. ('pos', 1.0)\n",
             "\n",
             "\n",
             "ID: 1416452260826132482\n",
             "2021-07-17 17:38:30\n",
-            "@ValaAfshar Haha\n",
+            "@ValaAfshar Haha ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416448342419251203\n",
             "2021-07-17 17:22:55\n",
-            "@TrungTPhan Now, he can bench press a rhino\n",
+            "@TrungTPhan Now, he can bench press a rhino ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416447895411232770\n",
             "2021-07-17 17:21:09\n",
-            "@SamTwits Nice\n",
+            "@SamTwits Nice ('neg', 0.8)\n",
             "\n",
             "\n",
             "ID: 1416444660055224329\n",
             "2021-07-17 17:08:17\n",
-            "Tap on the screen https://t.co/YPyyj8V8DF\n",
+            "Tap on the screen https://t.co/YPyyj8V8DF ('neg', 1.0)\n",
             "\n",
             "\n",
             "ID: 1416441034469527556\n",
             "2021-07-17 16:53:53\n",
-            "@AshleyIllusion1 @lexfridman Lil X is hodling his Doge like a champ. Literally never said the word “sell” even once!\n",
+            "@AshleyIllusion1 @lexfridman Lil X is hodling his Doge like a champ. Literally never said the word “sell” even once! ('neg', 1.0)\n",
             "\n",
-            "\n"
+            "\n",
+            "ID: 1416440218903789568\n",
+            "2021-07-17 16:50:39\n",
+            "@lexfridman “All your basis points are belong to us” - fiat issuers ('neg', 0.8)\n",
+            "\n",
+            "\n",
+            "ID: 1416436593246756864\n",
+            "2021-07-17 16:36:14\n",
+            "@engineers_feed A classic ('neg', 0.8)\n",
+            "\n",
+            "\n",
+            "ID: 1416436076344971274\n",
+            "2021-07-17 16:34:11\n",
+            "@riorahardi618 True ('neg', 0.8)\n",
+            "\n",
+            "\n",
+            "ID: 1416435673494695938\n",
+            "2021-07-17 16:32:35\n",
+            "https://t.co/d4ZOSKZESP ('neg', 0.8)\n",
+            "\n",
+            "\n",
+            "ID: 1416286548258086914\n",
+            "2021-07-17 06:40:01\n",
+            "@Charly923407591 @techAU Haha ('neg', 0.8)\n",
+            "\n",
+            "\n",
+            "ID: 1416286233962160128\n",
+            "2021-07-17 06:38:46\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-7e9fe9b96e55>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ID: {}\"\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreated_at\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfull_text\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msentiment\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfull_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m      \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/sentiment_mod.py\u001b[0m in \u001b[0;36msentiment\u001b[0;34m(text)\u001b[0m\n\u001b[1;32m    117\u001b[0m     \u001b[0mfeats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfind_features\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    118\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 119\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mvoted_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvoted_classifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfidence\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeats\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/content/sentiment_mod.py\u001b[0m in \u001b[0;36mconfidence\u001b[0;34m(self, features)\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mvotes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_classifiers\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m             \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassify\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m             \u001b[0mvotes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/nltk/classify/api.py\u001b[0m in \u001b[0;36mclassify\u001b[0;34m(self, featureset)\u001b[0m\n\u001b[1;32m     52\u001b[0m         \"\"\"\n\u001b[1;32m     53\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0moverridden\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassify_many\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 54\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclassify_many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeatureset\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     55\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mNotImplementedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/nltk/classify/scikitlearn.py\u001b[0m in \u001b[0;36mclassify_many\u001b[0;34m(self, featuresets)\u001b[0m\n\u001b[1;32m     85\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_vectorizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeaturesets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m         \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_encoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mclasses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_clf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mprob_classify_many\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeaturesets\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/naive_bayes.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_X\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 77\u001b[0;31m         \u001b[0mjll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_joint_log_likelihood\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     78\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjll\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/sklearn/naive_bayes.py\u001b[0m in \u001b[0;36m_joint_log_likelihood\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m   1002\u001b[0m                              % (n_features, n_features_X))\n\u001b[1;32m   1003\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1004\u001b[0;31m         \u001b[0mneg_prob\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_log_prob_\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1005\u001b[0m         \u001b[0;31m# Compute  neg_prob · (1 - X).T  as  ∑neg_prob - X · neg_prob\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1006\u001b[0m         \u001b[0mjll\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msafe_sparse_dot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_log_prob_\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mneg_prob\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
