--- a/README
+++ b/README
@@ -1,2 +1,26 @@
-Les comentaba que ayer me estaba funcionando el speech to text, pero de un momento a otro dejó de leerme el archivo. 
-Sigue funcionando bien en collab, pero no sé porqué en jupyten no me funciona
+# Actividad Integradora 2
+
+## Descripción
+...
+
+## Cómo ejecutar el código
+...
+
+## Funcionalidades adicionales
+
+
+### Analisis de sentimientos de comentarios de Youtube
+...
+
+### FUNCIONALIDAD 2 DE GERARDO
+...
+
+### FUNCIONALIDAD 3 DE RICARD
+...
+
+### Recursos / Bases de datos utilizados
+  - ..
+
+## Integrantes
+  - Víctor Villarreal. A01039863
+  - 
