--- a/Integrador_2.ipynb
+++ b/Integrador_2.ipynb
@@ -4357,19 +4357,17 @@
         "id": "iq8fsbXNML3K"
       },
       "source": [
-        "## Funcionalidad Adicional: ....."
+        "## Funcionalidad Adicional 2"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "ff3GoDKsrclj"
+        "id": "AqDFX4MEMpqG"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Ver **MultiClassification.ipynb**\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -4377,19 +4375,17 @@
         "id": "ClIV-Vb1MQnP"
       },
       "source": [
-        "## Funcionalidad Adicional: ....."
+        "## Funcionalidad Adicional 3"
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "59ExK0kZrclj"
+        "id": "1uiYB8eCMzjf"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Ver **IMDB_sentiment_analysis.ipynb**"
+      ]
     }
   ]
 }
